[tool.poetry]
name = "realtime-transcription-chatbot"
version = "0.1.0"
description = "Realtime transcription chatbot"
authors = ["Nikhil Cheerla"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "==3.11.6"
torch = "2.4.1"
pyaudio = "^0.2.14"
numpy = "1.23.5"
python-dotenv = "^1.0.1"
datasets = "~2.21"
openai = "^1.44.0"
numba = "~0.60.0"
youtokentome = {git = "https://github.com/gburlet/YouTokenToMe.git", rev = "dependencies"}
cython = "0.29.17"
nemo-toolkit = {version = "1.21.0", extras = ["asr"]}
huggingface-hub = "0.23.2"
elevenlabs = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"